Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18170

conf-sanity test_123ad: 'llog print only showed 92/93 records'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for emoly <emoly@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/46914488-02f0-47cd-89b0-ab0907e5fe34

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/106986 - 5.14.0-362.24.1.el9_3.x86_64
      servers: https://build.whamcloud.com/job/lustre-reviews/106986 - 5.14.0-362.24.1_lustre.el9.x86_64

      This issue is very easy to reproduce by setting ONLY_REPEAT to n(n>=10).

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      conf-sanity test_123ad - llog print only showed 92/93 records

            eaujames Etienne Aujames
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: