LU-18170 obdclass: fix llog_print_cb()

This patch get rid off static variables in llog_print_cb().
This enables to run several instances of "lctl llog_print" in parallel
without memory corruption.

It also fixes the following:
- buffer overflow checks
- llog EOF detection
- ref leak in lod_iocontrol()

Add regression test conf-sanity 123H.
conf-sanity 123ad is modified to support records with varriable sizes.

Test-Parameters: testlist=conf-sanity env=ONLY=123
Test-Parameters: testlist=conf-sanity env=ONLY=123ad,ONLY_REPEAT=300
Test-Parameters: testlist=conf-sanity env=ONLY=123H,ONLY_REPEAT=20
Test-Parameters: testlist=replay-single env=ONLY=100d,ONLY_REPEAT=10
Signed-off-by: Etienne AUJAMES <eaujames@ddn.com>
Change-Id: Ibd971e38392d01b2069d29cb4799fbc922d31684
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56256
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Emoly Liu <emoly@whamcloud.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>